# rust-latest

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain  rustfmt.toml
src/: main.rs
