[package]
name = "rust-latest"
version = "1.3.0"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2018"

description = "A CLI tool to determine the latest version of the Rust toolchain."
repository = "https://github.com/dbeckwith/rust-latest"
readme = "README.md"
keywords = ["latest", "version", "release", "channel", "toolchain"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
structopt = "0.3.13"
clap = "2.33.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
anyhow = "1.0.28"
serde = { version = "1.0.106", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
toml = "0.5.6"
regex = "1.3.6"
maplit = "1.0.2"
