[package]
name = "rust-latest"
version = "1.4.0"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2018"

description = "A CLI tool to determine the latest version of the Rust toolchain."
repository = "https://github.com/dbeckwith/rust-latest"
readme = "README.md"
keywords = ["latest", "version", "release", "channel", "toolchain"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.7", features = ["derive"] }
maplit = "1.0.2"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
