[package]
name = "rust-latest"
version = "1.4.2"
authors = ["Daniel Beckwith <djbsnx@gmail.com>"]
edition = "2024"

description = "A CLI tool to determine the latest version of the Rust toolchain."
repository = "https://github.com/dbeckwith/rust-latest"
readme = "README.md"
keywords = ["latest", "version", "release", "channel", "toolchain"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
maplit = "1.0.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
